# synapse

./: .gitignore  COMMANDS.md  DESIGN.md  LICENSE  MAP.md  README.md  config.toml.example  pyproject.toml
deploy/: com.synapse-wx.bridge.plist.template
scripts/: backfill_sessions.py  finish_phase_a.sh  install_launchd.sh  live_verify.py  uninstall_launchd.sh
synapse_core/: alerts.py  anchor.py  bridge_state_store.py  cortex_kick.py  debounce.py  health.py  heartbeat.py  jsonl_edit.py  last_active.py  logging_config.py  marrow_session.py  qidu_notebook.py  qidu_parser.py  qidu_signal.py  replay.py  state.py  text_filters.py  usage.py
synapse_tg/: __main__.py  config.py  loop.py  markdown.py  outbox.py  split.py  typing_action.py
synapse_wx/: __init__.py  __main__.py  config.py  loop.py  outbox.py  sleep.py  split.py  typing_ping.py
tests/: test_alert_media_failure.py  test_alert_wx_death_escalation.py  test_alerts.py  test_anchor.py  test_bridge_state_store.py  test_channel_marker.py  test_commands_aliases.py  test_commands_registry.py  test_compact.py  test_cortex_kick.py  test_debounce.py  test_debounce_trailing_hold.py  test_effort.py  test_health.py  test_idle_archive_keep_sid.py  test_ilink_client.py  test_ilink_cursor.py  test_ilink_retry.py  test_jsonl_edit.py  test_last_active.py  test_loop_autonomous_turn.py  test_loop_boot_resume.py  test_loop_decoupled_flush.py  test_loop_e2e.py  test_loop_init_model.py  test_loop_last_active.py  test_loop_lazy_spawn.py  test_loop_media_inject.py  test_loop_midturn_buffer.py  test_loop_pause.py  test_loop_quote.py  (+59 more)
(+35 files in other folders)
