[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-bridge"
version = "0.1.0"
description = "Channel-agnostic LLM bridge with marrow memory integration"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[project.optional-dependencies]
tg = ["python-telegram-bot>=22.0"]
wx = [
    "httpx>=0.27",
    "qrcode>=7.4",
    "cryptography>=42",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]
all = ["synapse-bridge[tg,wx]"]
dev = ["ruff", "pytest>=9.0", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["synapse_core", "synapse_tg", "synapse_wx"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
